k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: online-library-ingress
  namespace: online-library
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: library.local  # Ajouter à /etc/hosts: 127.0.0.1 library.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: online-library-service
                port:
                  number: 8080
          - path: /prometheus
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
---
